Fixing layout problems on mobile and small screens #29

--- a/public/stylesheets/hmb-style-main.css
+++ b/public/stylesheets/hmb-style-main.css
@@ -54,6 +54,12 @@ body.fixed-nav {
   padding-top: 56px;
 }
 
+@media screen and (max-width: 800px) {
+  body.fixed-nav {
+    padding-top: calc(56px * 3);
+  }
+}
+
 .content-wrapper {
   min-height: calc(100vh - 56px);
   padding-top: 1rem;
